# snulbug

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hello.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
asgi_lua/: __init__.py  __main__.py  config.py  inspection.py  middleware.py  presets.py  promotion.py  proxy.py  quickstart.py  recorder.py  redaction.py  runtime.py  simulator.py  state.py
asgi_lua/builtin_presets/mcp/auth-required.asgi-lua/: manifest.json  policy.lua
asgi_lua/builtin_presets/mcp/local-dev-safe.asgi-lua/: manifest.json  policy.lua
asgi_lua/builtin_presets/mcp/no-shell-tools.asgi-lua/: README.md  policy.lua
asgi_lua/builtin_presets/mcp/project-path-allowlist.asgi-lua/: README.md  policy.lua
docs/: README.md  actions.md  auth-providers.md  bundles.md  ci-policy-gates.md  comparison.md  credential-brokers.md  devcontainers.md  discovery-providers.md  event-sink-providers.md  evidence-exporters.md  expose.md  getting-started.md  lua-policy-dsl.md  lua-request-api.md  mcp-auth-recipes.md  mcp-client-recipes.md  mcp-evidence.md  mcp-fabric.md  mcp-gateway.md  mcp-guide.md  mcp-impact.md  mcp-learn.md  mcp-policy.md  mcp-presets.md  mcp-proxy.md  mcp-recorder.md  mcp-schemas.md  mcp-share.md  mcp-tools.md  ngrok-end-to-end.md  policy-deny-backoff.md  quickstart.md  release.md  roadmap.md  security-model.md  share-doctor-checks.md  state.md  tool-catalog-projection.md  tool-risk-analyzers.md  (+4 more)
examples/auth_claim_patterns/: .gitignore  README.md  ci-workload-identity.toml  group-gated-tools.toml  policy.lua  tenant-isolation.toml
examples/basic/: README.md  app.py
examples/bundles/idempotency.asgi-lua/: README.md
examples/bundles/idempotency.snulbug/: README.md  manifest.json  policy.lua
examples/bundles/mcp-gateway.asgi-lua/: README.md  manifest.json  policy.lua
examples/bundles/mcp-gateway.snulbug/: README.md
examples/codespace_local_gateway/: README.md  mcp-client.json  mock_mcp_server.py  policy.lua  snulbug.env-gateway.toml  snulbug.local-gateway.toml
examples/codespace_local_gateway/.devcontainer/: devcontainer.json
examples/customer_policy/: README.md  app.py
examples/customer_policy/policies/: acme.lua  default.lua  globex.lua
examples/customer_policy/requests/: acme-valid.json  globex-sandbox.json  unknown-tenant.json
examples/github-actions/: snulbug-policy-gates.yml
examples/keycloak_oauth_demo/: .gitignore  Dockerfile.gateway  README.md  docker-compose.yml  get-token.py  mock_mcp_server.py  snulbug.toml
examples/keycloak_oauth_demo/keycloak/: snulbug-demo-realm.json
examples/keycloak_oauth_demo/policy.snulbug/: policy.lua
examples/keycloak_oauth_demo/requests/: blocked-write-file.json  read-file.json  tools-list.json
examples/mcp_container_facade/: Dockerfile.gateway  Dockerfile.remote-peer  README.md  docker-compose.yml  hypertele-client.json  hypertele-server.json  mcp-client.json  mock_mcp_server.js  mock_mcp_server.py  policy.lua  snulbug.facade.toml  snulbug.local.toml
examples/mcp_gateway/: README.md  app.py
examples/mcp_proxy_demo/: README.md  run_demo.py  upstream.py
examples/mcp_proxy_demo/requests/: blocked-tool.json  safe-tool.json
examples/policy_promotion/: README.md  active.lua  draft.lua
examples/policy_promotion/fixtures/: acme-invalid.json
examples/provider_policy_templates/: README.md  cloudflare-access-group-gate.lua  entra-app-role-gate.lua  github-actions-workload-gate.lua  keycloak-role-gate.lua
examples/state_replay/: README.md  duplicate-state.json  request.json
examples/webhook_normalization/: README.md  app.py
examples/webhook_normalization/policies/: github.lua  stripe.lua  unknown.lua
examples/webhook_normalization/requests/: github-push.json  stripe-invoice.json  stripe-malformed.json  unknown-vendor.json
features/snulbug/: README.md  devcontainer-feature.json  install.sh
snulbug/: __init__.py  __main__.py  auth_providers.py  auth_recipes.py  bundle.py  cli_helpers.py  cloudflare_access.py  codespaces.py  config.py  confirm.py  control_events.py  controller.py  credentials.py  discovery.py  events.py  evidence_exporters.py  expose.py  fabric.py  fabric_control.py  fabric_members.py  fabric_runtime.py  gateway_templates.py  guide.py  impact.py  inspection.py  lab.py  learn.py  leases.py  manifests.py  mcp_auth.py  mcp_capabilities.py  mcp_policy_bundles.py  mcp_schema_policy.py  mcp_schemas.py  mcp_tools.py  middleware.py  policy_activation.py  policy_backoff.py  policy_review.py  presets.py  (+21 more)
snulbug/assets/: prism.css  prism.js
snulbug/cli/: __init__.py  common.py  evidence.py  fabric.py  policy.py  rich_reports.py  rich_share.py  schemas.py  share.py
tests/: test_auth_claim_patterns.py  test_auth_recipes.py  test_cli_helpers.py  test_cloudflare_access.py  test_codespaces.py  test_config.py  test_credentials.py  test_customer_policy_demo.py  test_devcontainer_feature.py  test_discovery.py  test_events.py  test_evidence_exporters.py  test_expose.py  test_fabric.py  test_fabric_controller.py  test_keycloak_oauth_demo.py  test_leases.py  test_manifests.py  test_mcp_gateway_demo.py  test_mcp_guide.py  test_mcp_helpers.py  test_mcp_impact.py  test_mcp_inspection.py  test_mcp_lab.py  test_mcp_learn.py  test_mcp_policy_bundles.py  test_mcp_presets.py  test_mcp_proxy_demo.py  test_mcp_quickstart.py  test_mcp_recorder.py  test_mcp_schema_policy.py  test_mcp_schemas.py  test_mcp_share.py  test_mcp_tools.py  test_middleware.py  test_policy_bundle.py  test_policy_promotion.py  test_policy_state.py  test_provider_policy_templates.py  test_proxy.py  (+14 more)
uvicorn_lua/: __init__.py  __main__.py  middleware.py  promotion.py  runtime.py  simulator.py  state.py
(+52 files in other folders)
