[project]
name = "asgi-lua"
version = "0.1.0"
description = "A programmable Lua request-policy middleware for ASGI applications"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "asgi-lua contributors" },
]
keywords = [
    "asgi",
    "lua",
    "middleware",
    "policy",
    "fastapi",
    "starlette",
    "webhooks",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Lua",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lupa>=2.5",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
asgi-lua = "asgi_lua.simulator:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asgi_lua"]

[tool.hatch.build.targets.sdist]
include = [
    "asgi_lua",
    "examples",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["."]
