[project]
name = "snulbug"
version = "0.1.0"
description = "A local-dev MCP policy proxy with Lua policies, replay logs, and learned least-privilege bundles"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "snulbug contributors" },
]
keywords = [
    "asgi",
    "lua",
    "mcp",
    "middleware",
    "policy",
    "proxy",
    "security",
    "fastapi",
    "starlette",
    "webhooks",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Lua",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lupa>=2.5",
    "tomli>=2.0; python_version < '3.11'",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0",
]
discovery = [
    "pyyaml>=6.0",
]
dev = [
    "bandit>=1.9.4",
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/lbruhacs/snulbug"
Repository = "https://github.com/lbruhacs/snulbug"
Issues = "https://github.com/lbruhacs/snulbug/issues"
Changelog = "https://github.com/lbruhacs/snulbug/blob/main/CHANGELOG.md"

[project.scripts]
snulbug = "snulbug.simulator:main"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snulbug"]

[tool.hatch.build.targets.sdist]
include = [
    "snulbug",
    "docs",
    "examples",
    "features",
    "tests",
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "README.md",
    "LICENSE",
    "SECURITY.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
